Database fixes. Task command additions. Localization features.